# Todo_List_Qt

./: CMakeLists.txt  README.md  build.sh  todo.json
src/: main.cpp
